// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnifiedFieldList FieldItemButton renders properly 1`] = `
<div>
  <div
    class="kbnFieldButton unifiedFieldListItemButton unifiedFieldListItemButton--number unifiedFieldListItemButton--exists css-10h723i-field_button--FieldButton-field_item_button--removeEuiFocusRing-field_item_button--removeEuiFocusRing-field_item_button--passDownFocusRing-field_item_button--fieldButtonCss"
  >
    <button
      aria-label="Preview bytes: number"
      class="kbn-resetFocusState kbnFieldButton__button css-ckz4vb-field_button--fieldButtonContentCss"
      data-test-subj="field-bytes-showDetails"
    >
      <span
        class="css-ptr1f1-field_button--fieldIconCss"
      >
        <div
          class="css-5b8zwo-field_item_button--fieldIconContainer"
        >
          <div
            class="unifiedFieldListItemButton__fieldIcon css-6qpwq2-field_item_button--fieldIconCss"
          />
        </div>
      </span>
      <span
        class="kbnFieldButton__name eui-textBreakAll css-vtp4ku-field_button--fieldNameCss"
      >
        <span
          class="kbnFieldButton__nameInner"
        >
          <span
            data-test-subj="field-bytes"
            title="bytes"
          >
            <mark
              class="euiMark emotion-euiMark-hasScreenReaderHelpText"
            >
              by
            </mark>
            tes
          </span>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`UnifiedFieldList FieldItemButton renders properly for Records (Lens field) 1`] = `
<div>
  <div
    class="kbnFieldButton unifiedFieldListItemButton unifiedFieldListItemButton--document unifiedFieldListItemButton--exists css-1niudjt-field_button--FieldButton-field_item_button--removeEuiFocusRing-field_item_button--removeEuiFocusRing-field_item_button--passDownFocusRing-field_item_button--fieldButtonCss"
  >
    <button
      aria-label="Preview Records: document"
      class="kbn-resetFocusState kbnFieldButton__button css-ckz4vb-field_button--fieldButtonContentCss"
      data-test-subj="field-___records___-showDetails"
    >
      <span
        class="css-ptr1f1-field_button--fieldIconCss"
      >
        <div
          class="css-5b8zwo-field_item_button--fieldIconContainer"
        >
          <div
            class="unifiedFieldListItemButton__fieldIcon css-6qpwq2-field_item_button--fieldIconCss"
          >
            <span
              class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis0"
            >
              <span
                data-euiicon-type="tokenNumber"
                title="Records"
              >
                Records
              </span>
            </span>
          </div>
        </div>
      </span>
      <span
        class="kbnFieldButton__name eui-textBreakAll css-vtp4ku-field_button--fieldNameCss"
      >
        <span
          class="kbnFieldButton__nameInner"
        >
          <span
            data-test-subj="field-___records___"
            title="Records"
          >
            <mark
              class="euiMark emotion-euiMark-hasScreenReaderHelpText"
            >
              Re
            </mark>
            cords
          </span>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`UnifiedFieldList FieldItemButton renders properly for search with spaces 1`] = `
<div>
  <div
    class="kbnFieldButton unifiedFieldListItemButton unifiedFieldListItemButton--date unifiedFieldListItemButton--exists css-10h723i-field_button--FieldButton-field_item_button--removeEuiFocusRing-field_item_button--removeEuiFocusRing-field_item_button--passDownFocusRing-field_item_button--fieldButtonCss"
  >
    <div
      class="kbn-resetFocusState kbnFieldButton__button css-ckz4vb-field_button--fieldButtonContentCss"
      data-test-subj="field-script date-showDetails"
    >
      <span
        class="css-ptr1f1-field_button--fieldIconCss"
      >
        <div
          class="css-5b8zwo-field_item_button--fieldIconContainer"
        >
          <div
            class="unifiedFieldListItemButton__fieldIcon css-6qpwq2-field_item_button--fieldIconCss"
          >
            <span
              class="euiToken kbnFieldIcon emotion-euiToken-square-dark-s-euiColorVis8"
            >
              <span
                data-euiicon-type="tokenDate"
                title="Date"
              >
                Date
              </span>
            </span>
          </div>
        </div>
      </span>
      <span
        class="kbnFieldButton__name eui-textBreakAll css-vtp4ku-field_button--fieldNameCss"
      >
        <span
          class="kbnFieldButton__nameInner"
        >
          <span
            data-test-subj="field-script date"
            title="script date"
          >
            <mark
              class="euiMark emotion-euiMark-hasScreenReaderHelpText"
            >
              script date
            </mark>
          </span>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`UnifiedFieldList FieldItemButton renders properly for text-based column field 1`] = `
<div>
  <div
    class="kbnFieldButton unifiedFieldListItemButton unifiedFieldListItemButton--string unifiedFieldListItemButton--exists css-10h723i-field_button--FieldButton-field_item_button--removeEuiFocusRing-field_item_button--removeEuiFocusRing-field_item_button--passDownFocusRing-field_item_button--fieldButtonCss"
  >
    <div
      class="kbn-resetFocusState kbnFieldButton__button css-ckz4vb-field_button--fieldButtonContentCss"
      data-test-subj="field-agent-showDetails"
    >
      <span
        class="css-ptr1f1-field_button--fieldIconCss"
      >
        <div
          class="css-5b8zwo-field_item_button--fieldIconContainer"
        >
          <div
            class="unifiedFieldListItemButton__fieldIcon css-6qpwq2-field_item_button--fieldIconCss"
          >
            <span
              class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis2"
            >
              <span
                data-euiicon-type="tokenString"
                title="String"
              >
                String
              </span>
            </span>
          </div>
        </div>
      </span>
      <span
        class="kbnFieldButton__name eui-textBreakAll css-vtp4ku-field_button--fieldNameCss"
      >
        <span
          class="kbnFieldButton__nameInner"
        >
          <span
            data-test-subj="field-agent"
            title="agent"
          >
            <mark
              class="euiMark emotion-euiMark-hasScreenReaderHelpText"
            >
              ag
            </mark>
            ent
          </span>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`UnifiedFieldList FieldItemButton renders properly for wildcard search 1`] = `
<div>
  <div
    class="kbnFieldButton unifiedFieldListItemButton unifiedFieldListItemButton--date unifiedFieldListItemButton--exists css-10h723i-field_button--FieldButton-field_item_button--removeEuiFocusRing-field_item_button--removeEuiFocusRing-field_item_button--passDownFocusRing-field_item_button--fieldButtonCss"
  >
    <div
      class="kbn-resetFocusState kbnFieldButton__button css-ckz4vb-field_button--fieldButtonContentCss"
      data-test-subj="field-script date-showDetails"
    >
      <span
        class="css-ptr1f1-field_button--fieldIconCss"
      >
        <div
          class="css-5b8zwo-field_item_button--fieldIconContainer"
        >
          <div
            class="unifiedFieldListItemButton__fieldIcon css-6qpwq2-field_item_button--fieldIconCss"
          >
            <span
              class="euiToken kbnFieldIcon emotion-euiToken-square-dark-s-euiColorVis8"
            >
              <span
                data-euiicon-type="tokenDate"
                title="Date"
              >
                Date
              </span>
            </span>
          </div>
        </div>
      </span>
      <span
        class="kbnFieldButton__name eui-textBreakAll css-vtp4ku-field_button--fieldNameCss"
      >
        <span
          class="kbnFieldButton__nameInner"
        >
          <span
            data-test-subj="field-script date"
            title="script date"
          >
            <mark
              class="euiMark emotion-euiMark-hasScreenReaderHelpText"
            >
              script date
            </mark>
          </span>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`UnifiedFieldList FieldItemButton renders properly when a conflict field 1`] = `
<div>
  <div
    class="kbnFieldButton unifiedFieldListItemButton unifiedFieldListItemButton--conflict unifiedFieldListItemButton--exists css-1niudjt-field_button--FieldButton-field_item_button--removeEuiFocusRing-field_item_button--removeEuiFocusRing-field_item_button--passDownFocusRing-field_item_button--fieldButtonCss"
  >
    <button
      aria-label="Preview custom_user_field: conflict"
      class="kbn-resetFocusState kbnFieldButton__button css-ckz4vb-field_button--fieldButtonContentCss"
      data-test-subj="field-custom_user_field-showDetails"
    >
      <span
        class="css-ptr1f1-field_button--fieldIconCss"
      >
        <div
          class="css-5b8zwo-field_item_button--fieldIconContainer"
        >
          <div
            class="unifiedFieldListItemButton__fieldIcon css-6qpwq2-field_item_button--fieldIconCss"
          >
            <span
              class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis9"
            >
              <span
                data-euiicon-type="warning"
                title="Conflict"
              >
                Conflict
              </span>
            </span>
          </div>
        </div>
      </span>
      <span
        class="kbnFieldButton__name eui-textBreakAll css-vtp4ku-field_button--fieldNameCss"
      >
        <span
          class="kbnFieldButton__nameInner"
        >
          <span
            data-test-subj="field-custom_user_field"
            title="custom_user_field"
          >
            custom_user_field
          </span>
        </span>
      </span>
      <div
        class="kbnFieldButton__infoIcon css-m57qhj-field_button--fieldInfoIconCss"
      >
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <span
            data-euiicon-type="warning"
            tabindex="0"
          />
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`UnifiedFieldList FieldItemButton renders properly when empty 1`] = `
<div>
  <div
    class="kbnFieldButton unifiedFieldListItemButton unifiedFieldListItemButton--date unifiedFieldListItemButton--missing css-1ih5q89-field_button--FieldButton-field_item_button--removeEuiFocusRing-field_item_button--removeEuiFocusRing-field_item_button--passDownFocusRing-field_item_button--fieldButtonCss"
  >
    <button
      aria-label="Preview script date: date"
      class="kbn-resetFocusState kbnFieldButton__button css-ckz4vb-field_button--fieldButtonContentCss"
      data-test-subj="field-script date-showDetails"
    >
      <span
        class="css-ptr1f1-field_button--fieldIconCss"
      >
        <div
          class="css-5b8zwo-field_item_button--fieldIconContainer"
        >
          <div
            class="unifiedFieldListItemButton__fieldIcon css-6qpwq2-field_item_button--fieldIconCss"
          >
            <span
              class="euiToken kbnFieldIcon emotion-euiToken-square-dark-s-euiColorVis8"
            >
              <span
                data-euiicon-type="tokenDate"
                title="Date"
              >
                Date
              </span>
            </span>
          </div>
        </div>
      </span>
      <span
        class="kbnFieldButton__name eui-textBreakAll css-vtp4ku-field_button--fieldNameCss"
      >
        <span
          class="kbnFieldButton__nameInner"
        >
          <span
            data-test-subj="field-script date"
            title="script date"
          >
            script date
          </span>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`UnifiedFieldList FieldItemButton renders properly with a drag icon 1`] = `
<div>
  <div
    class="kbnFieldButton unifiedFieldListItemButton unifiedFieldListItemButton--number unifiedFieldListItemButton--exists unifiedFieldListItemButton--withDragIcon custom css-1va5oej-field_button--FieldButton-field_item_button--removeEuiFocusRing-field_item_button--removeEuiFocusRing-field_item_button--passDownFocusRing-field_item_button--fieldButtonCss"
  >
    <div
      class="kbn-resetFocusState kbnFieldButton__button css-alxjoy-field_button--fieldButtonContentCss"
      data-test-subj="test-subj"
    >
      <span
        class="css-ptr1f1-field_button--fieldIconCss"
      >
        <div
          class="css-5b8zwo-field_item_button--fieldIconContainer"
        >
          <div
            class="unifiedFieldListItemButton__fieldIcon css-6qpwq2-field_item_button--fieldIconCss"
          >
            <span
              class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis0"
            >
              <span
                data-euiicon-type="tokenNumber"
                title="Number"
              >
                Number
              </span>
            </span>
          </div>
          <div
            class="unifiedFieldListItemButton__fieldIconDrag css-1l8amqi-field_item_button--dragHandleCss"
          >
            <span
              data-euiicon-type="grabOmnidirectional"
            />
          </div>
        </div>
      </span>
      <span
        class="kbnFieldButton__name eui-textBreakAll css-vtp4ku-field_button--fieldNameCss"
      >
        <span
          class="kbnFieldButton__nameInner"
        >
          <span
            data-test-subj="field-bytes"
            title="bytes"
          >
            bytes
          </span>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`UnifiedFieldList FieldItemButton renders properly with an action when deselected 1`] = `
<div>
  <div
    class="kbnFieldButton unifiedFieldListItemButton unifiedFieldListItemButton--number unifiedFieldListItemButton--exists css-10h723i-field_button--FieldButton-field_item_button--removeEuiFocusRing-field_item_button--removeEuiFocusRing-field_item_button--passDownFocusRing-field_item_button--fieldButtonCss"
  >
    <div
      class="kbn-resetFocusState kbnFieldButton__button css-ckz4vb-field_button--fieldButtonContentCss"
      data-test-subj="field-bytes-showDetails"
    >
      <span
        class="css-ptr1f1-field_button--fieldIconCss"
      >
        <div
          class="css-5b8zwo-field_item_button--fieldIconContainer"
        >
          <div
            class="unifiedFieldListItemButton__fieldIcon css-6qpwq2-field_item_button--fieldIconCss"
          >
            <span
              class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis0"
            >
              <span
                data-euiicon-type="tokenNumber"
                title="Number"
              >
                Number
              </span>
            </span>
          </div>
        </div>
      </span>
      <span
        class="kbnFieldButton__name eui-textBreakAll css-vtp4ku-field_button--fieldNameCss"
      >
        <span
          class="kbnFieldButton__nameInner"
        >
          <span
            data-test-subj="field-bytes"
            title="bytes"
          >
            bytes
          </span>
        </span>
      </span>
    </div>
    <div
      class="css-1f5cj2i-field_button--FieldButton"
    >
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Add \\"bytes\\" field"
          class="euiButtonIcon unifiedFieldListItemButton__action unifiedFieldListItemButton__action--always emotion-euiButtonIcon-xs-empty-text-field_item_button--unifiedFieldListItemButtonActionCss"
          data-test-subj="fieldToggle-bytes"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="plusInCircle"
          />
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`UnifiedFieldList FieldItemButton renders properly with an action when selected 1`] = `
<div>
  <div
    class="kbnFieldButton unifiedFieldListItemButton unifiedFieldListItemButton--number unifiedFieldListItemButton--exists css-10h723i-field_button--FieldButton-field_item_button--removeEuiFocusRing-field_item_button--removeEuiFocusRing-field_item_button--passDownFocusRing-field_item_button--fieldButtonCss"
  >
    <button
      aria-label="Preview bytes: number"
      class="kbn-resetFocusState kbnFieldButton__button css-ckz4vb-field_button--fieldButtonContentCss"
      data-test-subj="field-bytes-showDetails"
    >
      <span
        class="css-ptr1f1-field_button--fieldIconCss"
      >
        <div
          class="css-5b8zwo-field_item_button--fieldIconContainer"
        >
          <div
            class="unifiedFieldListItemButton__fieldIcon css-6qpwq2-field_item_button--fieldIconCss"
          >
            <span
              class="euiToken kbnFieldIcon emotion-euiToken-square-light-s-euiColorVis0"
            >
              <span
                data-euiicon-type="tokenNumber"
                title="Number"
              >
                Number
              </span>
            </span>
          </div>
        </div>
      </span>
      <span
        class="kbnFieldButton__name eui-textBreakAll css-vtp4ku-field_button--fieldNameCss"
      >
        <span
          class="kbnFieldButton__nameInner"
        >
          <span
            data-test-subj="field-bytes"
            title="bytes"
          >
            bytes
          </span>
        </span>
      </span>
    </button>
    <div
      class="css-1f5cj2i-field_button--FieldButton"
    >
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Remove \\"bytes\\" field"
          class="euiButtonIcon unifiedFieldListItemButton__action emotion-euiButtonIcon-xs-empty-danger-field_item_button--unifiedFieldListItemButtonActionCss"
          data-test-subj="fieldToggle-bytes"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </span>
    </div>
  </div>
</div>
`;
